Fixes to site layout on small displays.

--- a/site/public/css/plusf.css
+++ b/site/public/css/plusf.css
@@ -53,6 +53,7 @@ h1 {
     align-self: center;
     color: white;
     margin: 2px;
+    text-align: center;
 }
 
 .logo {
